# tinyusb

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
.github/workflows/: build_examples.yml  sync_esp_pkgmng.yml
src/class/video/: video_device.c
src/portable/espressif/esp32sx/: dcd_esp32sx.c
src/portable/synopsys/dwc2/: dcd_dwc2.c  dwc2_esp32.h  dwc2_type.h
test/idf/device/cdc_msc_freertos/: CMakeLists.txt  README.md  sdkconfig.defaults
test/idf/device/cdc_msc_freertos/main/: CMakeLists.txt  idf_component.yml  main.c  msc_disk.c  tusb_config.h  usb_descriptors.c
